--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,11 @@ body {
   src: url("./assets/fonts/Outfit-SemiBold.ttf");
 }
 
+@font-face {
+  font-family: "font-navollen";
+  src: url("./assets/fonts/NevollenRegular-G3Y7O.ttf");
+}
+
 ::-webkit-scrollbar {
   width: 8px;
   height: 8px;
@@ -96,4 +101,68 @@ body {
   to {
     transform: rotate(1turn);
   }
+}
+
+.button {
+  text-decoration: none;
+  line-height: 1;
+  border-radius: 1.5rem;
+  overflow: hidden;
+  position: relative;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.05);
+  color: #121212;
+  border: none;
+  cursor: pointer;
+}
+
+.button-decor {
+  position: absolute;
+  inset: 0;
+  background-color: #00ad54;
+  transform: translateX(-100%);
+  transition: transform 0.3s;
+  z-index: 0;
+}
+
+.button-content {
+  display: flex;
+  align-items: center;
+  font-weight: 600;
+  position: relative;
+  overflow: hidden;
+}
+
+.button__icon {
+  width: 48px;
+  height: 40px;
+  display: grid;
+  place-items: center;
+  background-color: #00ad54;
+}
+
+.button__icon > svg {
+  color: #fff;
+}
+
+.button:hover {
+  background: #00ad54;
+}
+
+.button__text {
+  display: inline-block;
+  transition: color 0.2s;
+  padding: 2px 1.5rem 2px;
+  padding-left: 0.75rem;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: 150px;
+}
+
+.button:hover .button__text {
+  color: #fff;
+}
+
+.button:hover .button-decor {
+  transform: translate(0);
 }
